syntax="proto3";

import "google/protobuf/empty.proto";

option go_package="github.com/go-broadcast/examples/service";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative service.proto

service ChatService {
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
    rpc Subscribe(SubscribeRequest) returns (stream ChatMessage) {}
}

message SendMessageRequest {
    string user = 1;
    string message = 2;
}

message SubscribeRequest {
    string user = 1;
}

message ChatMessage {
	string contents = 1;
	string from = 2;
}
